tests/ui/formatter/fail/unsupported_formatter.stderr
error: placeholder spanning bytes 0..9 uses an unsupported formatter
 --> tests/ui/formatter/fail/unsupported_formatter.rs:4:9
  |
4 | #[error("{value:y}")]
  |         ^^^^^^^^^^^

error: missing #[error(...)] attribute
 --> tests/ui/formatter/fail/unsupported_formatter.rs:5:8
  |
5 | struct UnsupportedFormatter {
  |        ^^^^^^^^^^^^^^^^^^^^
